--- a/Employee/extra-addons/sample/my_employee/views/employee_views.xml
+++ b/Employee/extra-addons/sample/my_employee/views/employee_views.xml
@@ -8,57 +8,42 @@
             <field name="inherit_id" ref="hr.view_employee_form"/>
             <field name="arch" type="xml">
                 <data>
-                    <page name="personal_information" string="Private Information" groups="hr.group_hr_user">
-                        <!-- <notebook> -->
-                            <!-- <page name="personal_information" string="Private Information" groups="hr.group_hr_user">-->
-                        <group>
-                            
-                            <group string="Mối quan hệ của Nhân viên"> 
-                                <field name="relationship_ids" mode="tree,kanban">
-                                    <tree editable="bottom">
-                                        <field name="name" attrs="{'name': 'name'}" groups="hr.group_hr_user"/>
-                                        <field name="relation_type" attrs="{'name': 'relation_type'}" groups="hr.group_hr_user"/>
-                                    </tree>
-                                </field>
-                            </group>
-                            <group string="Hồ sơ Y tế" name="medical_records_page">
-                                <field name="medical_record_ids" widget="one2many_list">
-                                    <tree>
-                                        <field name="date" attrs="{'name': 'date'}"/>
-                                        <field name="diagnosis" attrs="{'name': 'diagnosis'}" groups="hr.group_hr_user"/>
-                                        <field name="treatment" attrs="{'name': 'treatment'}" groups="hr.group_hr_user"/>
-                                    </tree>
-                                </field>
-                            </group>
-                        </group>    
-                        <!-- </notebook>
-                    </xpath> -->
-                    </page>        
-                    <page name="personal_information" string="Private Information" groups="hr.group_hr_user">
-                        <group string="Thông tin liên quan thu nhập">     
-                        
-                                <!-- Thêm các trường liên quan đến lương vào giao diện biểu mẫu -->
-                                <field name="labor_contract" widget="binary" filename="labor_contract_filename"/>
-                                <field name="appendix_contract" widget="binary" filename="appendix_contract_filename"/>
-                                <field name="salary_adjustment" widget="binary" filename="salary_adjustment_filename"/>
-                            
-                       </group> 
-                    </page>
+                    <xpath expr="//page[@name='personal_information']" position="inside">
+                        <group string="Mối quan hệ của Nhân viên"> 
+                            <field name="relationship_ids" mode="tree,kanban">
+                                <tree editable="bottom">
+                                    <field name="name" attrs="{'name': 'name'}" groups="hr.group_hr_user"/>
+                                    <field name="relation_type" attrs="{'name': 'relation_type'}" groups="hr.group_hr_user"/>
+                                </tree>
+                            </field>
+                        </group>
+                        <group string="Hồ sơ Y tế" name="medical_records_page">
+                            <field name="medical_record_ids" widget="one2many_list">
+                                <tree>
+                                    <field name="date" attrs="{'name': 'date'}"/>
+                                    <field name="diagnosis" attrs="{'name': 'diagnosis'}" groups="hr.group_hr_user"/>
+                                    <field name="treatment" attrs="{'name': 'treatment'}" groups="hr.group_hr_user"/>
+                                </tree>
+                            </field>
+                        </group>
+                    </xpath>
                 </data>
             </field>
         </record>
-   
+
         <record id="employee_report_action" model="ir.actions.report">
-        <field name="name">Báo cáo nhân viên</field>
-        <field name="model">employee.report</field>
-        <field name="report_type">qweb-pdf</field>
-        <field name="report_name">employee.report_employee</field>
-        <field name="file">employee.report_employee</field>
+            <field name="name">Báo cáo nhân viên</field>
+            <field name="model">hr.employee</field>
+            <field name="report_type">qweb-pdf</field>
+            <field name="report_name">my_employee.report_employee</field>
+            <field name="file">my_employee.report_employee</field>
         </record>
 
         <template id="report_employee">
-            <t t-call="web.html_container">
-                <t t-foreach="docs" t-as="report">
+        <main>
+            <t t-call="web.external_layout">
+                <t t-foreach="docs" t-as="doc">
+                
                     <div class="page">
                         <h1>Báo cáo nhân viên</h1>
                         <table class="table table-sm table-bordered">
@@ -74,28 +59,36 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <t t-foreach="report.get_employee_data()" t-as="employee">
-                                    <tr>
-                                        <td><span t-esc="employee.name"/></td>
-                                        <td><span t-esc="employee.birthday"/></td>
-                                        <td><span t-esc="employee.certificate"/></td>
-                                        <td><span t-esc="employee.study_field"/></td>
-                                        <td><span t-esc="employee.department_id"/></td>
-                                        <td><span t-esc="employee.ssnid"/></td>
-                                        <td><span t-esc="employee.notes"/></td>
-                                    </tr>
-                                </t>
+                                <tr>
+                                    <td><span t-esc="doc.name"/></td>
+                                    <td><span t-esc="doc.birthday"/></td>
+                                    <td><span t-esc="doc.certificate"/></td>
+                                    <td><span t-esc="doc.study_field"/></td>
+                                    <td><span t-esc="doc.department_id"/></td>
+                                    <td><span t-esc="doc.ssnid"/></td>
+                                    <td><span t-esc="doc.notes"/></td>
+                                </tr>
                             </tbody>
                         </table>
                     </div>
+                
                 </t>
             </t>
+            </main>
         </template>
+
+        <report
+            id="report_employee"
+            string="My PDF Report"
+            model="hr.employee"
+            report_type="qweb-pdf"
+            name="my_employee.report_employee"
+            file="my_employee.report_employee"
+            attachment_use="True"
+        />
 
         <menuitem id="menu_employee_report" name="Báo cáo nhân viên" parent="hr.menu_hr_root" sequence="20"/>
         <menuitem id="menu_employee_report_list" name="Danh sách báo cáo nhân viên" parent="menu_employee_report" action="employee_report_action" sequence="10"/>
 
-        
     </data>
 </odoo>
-
