--- a/Employee/extra-addons/sample/my_employee/views/employee_views.xml
+++ b/Employee/extra-addons/sample/my_employee/views/employee_views.xml
@@ -1,50 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-    <data>
-        <!-- Kế thừa giao diện hiện có -->
-        <record id="view_employee_form_inherit" model="ir.ui.view">
-            <field name="name">hr.employee.form.inherit</field>
-            <field name="model">hr.employee</field>
-            <field name="inherit_id" ref="hr.view_employee_form"/>
-            <field name="arch" type="xml">
-                <data>
-                    <xpath expr="//page[@name='personal_information']" position="inside">
-                        <group string="Mối quan hệ của Nhân viên"> 
-                            <field name="relationship_ids" mode="tree,kanban">
-                                <tree editable="bottom">
-                                    <field name="name" attrs="{'name': 'name'}" groups="hr.group_hr_user"/>
-                                    <field name="relation_type" attrs="{'name': 'relation_type'}" groups="hr.group_hr_user"/>
-                                </tree>
-                            </field>
-                        </group>
-                        <group string="Hồ sơ Y tế" name="medical_records_page">
-                            <field name="medical_record_ids" widget="one2many_list">
-                                <tree>
-                                    <field name="date" attrs="{'name': 'date'}"/>
-                                    <field name="diagnosis" attrs="{'name': 'diagnosis'}" groups="hr.group_hr_user"/>
-                                    <field name="treatment" attrs="{'name': 'treatment'}" groups="hr.group_hr_user"/>
-                                </tree>
-                            </field>
-                        </group>
-                    </xpath>
-                </data>
-            </field>
-        </record>
+    <record id="view_employee_form_inherit" model="ir.ui.view">
+        <field name="name">hr.employee.form.inherit</field>
+        <field name="model">hr.employee</field>
+        <field name="inherit_id" ref="hr.view_employee_form"/>
+        <field name="arch" type="xml">
+            <data>
+                <xpath expr="//page[@name='personal_information']" position="inside">
+                    <group string="Mối quan hệ của Nhân viên">
+                        <field name="relationship_ids" mode="tree,kanban">
+                            <tree editable="bottom">
+                                <field name="name" attrs="{'name': 'name'}" groups="hr.group_hr_user"/>
+                                <field name="relation_type" attrs="{'name': 'relation_type'}" groups="hr.group_hr_user"/>
+                            </tree>
+                        </field>
+                    </group>
+                    <group string="Hồ sơ Y tế">
+                        <field name="medical_record_ids" widget="one2many_list">
+                            <tree>
+                                <field name="date" attrs="{'name': 'date'}"/>
+                                <field name="treatment" attrs="{'name': 'treatment'}" groups="hr.group_hr_user"/>
+                                <field name="diagnosis" attrs="{'name': 'diagnosis'}" groups="hr.group_hr_user"/>
+                                <field name="bhxh" attrs="{'name': 'BHXH'}" groups="hr.group_hr_user"/>
+                            </tree>
+                        </field>
+                    </group>
+                </xpath>
+                       
+                    <page name="personal_information" string="Private Information" groups="hr.group_hr_user">
+                        <group string="Thông tin liên quan thu nhập">     
+                        
+                                <!-- Thêm các trường liên quan đến lương vào giao diện biểu mẫu -->
+                                <field name="labor_contract" widget="binary" filename="labor_contract_filename"/>
+                                <field name="appendix_contract" widget="binary" filename="appendix_contract_filename"/>
+                                <field name="salary_adjustment" widget="binary" filename="salary_adjustment_filename"/>
+                            
+                       </group> 
+                    </page>
+            </data>
+        </field>
+    </record>
 
-        <record id="employee_report_action" model="ir.actions.report">
-            <field name="name">Báo cáo nhân viên</field>
-            <field name="model">hr.employee</field>
-            <field name="report_type">qweb-pdf</field>
-            <field name="report_name">my_employee.report_employee</field>
-            <field name="file">my_employee.report_employee</field>
-        </record>
+    <record id="employee_report_action" model="ir.actions.report">
+        <field name="name">Báo cáo nhân viên</field>
+        <field name="model">hr.employee</field>
+        <field name="report_type">qweb-pdf</field>
+        <field name="report_name">my_employee.report_employee</field>
+        <field name="file">my_employee.report_employee</field>
+    </record>
 
-        <template id="report_employee">
-        <main>
-            <t t-call="web.external_layout">
-                <t t-foreach="docs" t-as="doc">
-                
-                    <div class="page">
+    <template id="report_employee">
+        <t t-call="web.external_layout">
+            <t t-foreach="docs" t-as="doc">
+                <div class="page">
+                    <main>
                         <h1>Báo cáo nhân viên</h1>
                         <table class="table table-sm table-bordered">
                             <thead>
@@ -64,31 +73,83 @@
                                     <td><span t-esc="doc.birthday"/></td>
                                     <td><span t-esc="doc.certificate"/></td>
                                     <td><span t-esc="doc.study_field"/></td>
-                                    <td><span t-esc="doc.department_id"/></td>
-                                    <td><span t-esc="doc.ssnid"/></td>
-                                    <td><span t-esc="doc.notes"/></td>
+                                    <td><span t-esc="doc.department_id.name"/></td>
+                                    <td><span t-esc="doc.bhxh"/></td>
+                                    <td><span t-esc="doc.additional_note"/></td>
                                 </tr>
                             </tbody>
                         </table>
-                    </div>
-                
-                </t>
+                    </main>
+                </div>
             </t>
-            </main>
-        </template>
+        </t>
+    </template>
 
-        <report
-            id="report_employee"
-            string="My PDF Report"
-            model="hr.employee"
-            report_type="qweb-pdf"
-            name="my_employee.report_employee"
-            file="my_employee.report_employee"
-            attachment_use="True"
-        />
+    <report
+        id="report_employee"
+        string="My PDF Report"
+        model="hr.employee"
+        report_type="qweb-pdf"
+        name="my_employee.report_employee"
+        file="my_employee.report_employee"
+        attachment_use="True"
+    />
 
-        <menuitem id="menu_employee_report" name="Báo cáo nhân viên" parent="hr.menu_hr_root" sequence="20"/>
-        <menuitem id="menu_employee_report_list" name="Danh sách báo cáo nhân viên" parent="menu_employee_report" action="employee_report_action" sequence="10"/>
+    <menuitem id="menu_employee_report" name="Báo cáo nhân viên" parent="hr.menu_hr_root" sequence="20"/>
+    <menuitem id="menu_employee_report_list" name="Danh sách báo cáo nhân viên" parent="menu_employee_report" action="employee_report_action" sequence="10"/>
 
-    </data>
+    <record id="report_employee_list" model="ir.actions.report">
+        <field name="name">Employee List</field>
+        <field name="model">hr.employee</field>
+        <field name="report_type">qweb-pdf</field>
+        <field name="report_name">my_employee.report_employee_list</field>
+        <field name="file">my_employee.report_employee_list</field>
+        
+        <field name="print_report_name">"Danh sách nhân viên"</field>
+        <field name="report_rml">my_employee.report_employee_list</field>
+        <field name="attachment_use">True</field>
+    </record>
+
+    <template id="report_employee_list">
+        <t t-foreach="docs" t-as="o">
+            <t t-call="web.external_layout">
+                <div class="page">
+                <main>
+                    <h2>Danh sách nhân viên</h2>
+                    <table class="table table-sm table-bordered">
+                        <thead>
+                            <tr>
+                                <th>Họ tên</th>
+                                <th>Ngày sinh</th>
+                                <th>Phòng ban</th>
+                                <th>Chức vụ</th>
+                                <th>Ngày bắt đầu làm việc</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td><span t-esc="o.name"/></td>
+                                <td><span t-esc="o.birthday"/></td>
+                                <td><span t-esc="o.department_id.name"/></td>
+                                <td><span t-esc="o.job_title"/></td>
+                                <td><span t-esc="o.date_start"/></td>
+                                <span class="text-muted">(If fixed-term contract)</span>
+                            </tr>
+                        </tbody>
+                    </table>
+                </main>
+                </div>
+            </t>
+        </t>
+    </template>
+
+    <report
+        id="report_employee_list"
+        string="My PDF Report1"
+        model="hr.employee"
+        report_type="qweb-pdf"
+        name="my_employee.report_employee_list"
+        file="my_employee.report_employee_list"
+        attachment_use="True"
+    />
 </odoo>
